Addded base common classes & created Main activity and styles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BarsAround</string>
     <string name="places_api_key">AIzaSyCe41lFznZNN-J1ku4f2nzRSyC7SDTw9N0</string>
+    <string name="no_results">No results</string>
 </resources>
