--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BarsAround</string>
     <string name="no_results">No results</string>
+    <string name="bars">Bars</string>
+    <string name="map">Map</string>
 </resources>
