Final tweaks and UI improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="no_results">No results</string>
     <string name="bars">Bars</string>
     <string name="map">Map</string>
+    <string name="geo_location_query">geo: %1$f , %2$f?q="</string>
 </resources>
